# Time-Series-Projects-Hub

./: .gitattributes  .gitignore  README.md
Crypto-Market-Intelligence-Hub/: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-pinned.txt  requirements.txt
Crypto-Market-Intelligence-Hub/.github/workflows/: ci.yml  data-pipeline.yml  deploy-vercel.yml
Crypto-Market-Intelligence-Hub/Dataset/: eos.csv  injective.csv  internet_computer.csv  optimism.csv  pepe.csv  solana.csv  sui.csv  tezos.csv
Crypto-Market-Intelligence-Hub/config/: logging.yaml  model_params.yaml  settings.py
Crypto-Market-Intelligence-Hub/data/processed/: aave.parquet  algorand.parquet  aptos.parquet  arbitrum.parquet  avalanche.parquet  axie_infinity.parquet  binance_coin.parquet  bitcoin.parquet  bitcoin_cash.parquet  cardano.parquet  chainlink.parquet  cosmos.parquet  decentraland.parquet  dogecoin.parquet  eos.parquet  ethereum.parquet  fantom.parquet  filecoin.parquet  flow.parquet  hedera.parquet  immutable.parquet  injective.parquet  internet_computer.parquet  kaspa.parquet  lido.parquet  litecoin.parquet  maker.parquet  near.parquet  optimism.parquet  pepe.parquet  polkadot.parquet  polygon.parquet  render.parquet  sandbox.parquet  shiba_inu.parquet  solana.parquet  stacks.parquet  stellar.parquet  sui.parquet  tether.parquet  (+9 more)
Crypto-Market-Intelligence-Hub/data/raw/: bitcoin_cash.csv  flow.csv  lido.csv  near.csv  render.csv  sandbox.csv  the_graph.csv  tron.csv  xrp.csv
Crypto-Market-Intelligence-Hub/deployment/docker/: Dockerfile.api  Dockerfile.dashboard
Crypto-Market-Intelligence-Hub/deployment/vercel/: README.md  vercel.json
Crypto-Market-Intelligence-Hub/docs/: api_reference.md  architecture.md  deployment.md
Crypto-Market-Intelligence-Hub/experiments/: README.md
Crypto-Market-Intelligence-Hub/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
Crypto-Market-Intelligence-Hub/frontend/app/: globals.css  layout.tsx  page.tsx
Crypto-Market-Intelligence-Hub/frontend/hooks/: useCryptoData.ts  usePredictions.ts
Crypto-Market-Intelligence-Hub/frontend/types/: crypto.ts
Crypto-Market-Intelligence-Hub/notebooks/experiments/: summary_by_asset.csv
Crypto-Market-Intelligence-Hub/scripts/: generate_report.py  run_all.py  smoke_test.py
Crypto-Market-Intelligence-Hub/src/: __init__.py  evaluate.py  features.py
Crypto-Market-Intelligence-Hub/src/api/: __init__.py  dependencies.py  main.py  schemas.py
Crypto-Market-Intelligence-Hub/src/dashboard/: app.py
Crypto-Market-Intelligence-Hub/src/data/: __init__.py  clean.py  fetch.py  load.py  store.py
Crypto-Market-Intelligence-Hub/src/features/: __init__.py  pipeline.py  returns.py  technical.py
Crypto-Market-Intelligence-Hub/src/models/: __init__.py  arima_model.py  evaluate.py  gru_model.py  lstm_model.py  prophet_model.py  registry.py
Crypto-Market-Intelligence-Hub/src/utils/: __init__.py  helpers.py  logger.py
Crypto-Market-Intelligence-Hub/src/visualization/: __init__.py  charts.py
Crypto-Market-Intelligence-Hub/tests/fixtures/: conftest.py
Crypto-Market-Intelligence-Hub/tests/integration/: test_pipeline.py
Crypto-Market-Intelligence-Hub/tests/unit/: test_api_health.py  test_clean.py  test_data_load.py  test_evaluate.py  test_features.py
Hospitality-Workforce-Forecasting-Suite/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
Hospitality-Workforce-Forecasting-Suite/.github/workflows/: ci.yml
Hospitality-Workforce-Forecasting-Suite/Dataset/: README.md  requirements.txt
Hospitality-Workforce-Forecasting-Suite/config/: logging.yaml  model_params.yaml  settings.py
Hospitality-Workforce-Forecasting-Suite/dashboard/: README.md  script.js  styles.css
Hospitality-Workforce-Forecasting-Suite/deployment/docker/: Dockerfile.api  Dockerfile.dashboard
Hospitality-Workforce-Forecasting-Suite/frontend/: package-lock.json  package.json  tsconfig.json
Hospitality-Workforce-Forecasting-Suite/frontend/app/: globals.css  layout.tsx  page.tsx
Hospitality-Workforce-Forecasting-Suite/frontend/types/: api.ts
Hospitality-Workforce-Forecasting-Suite/scripts/: generate_report.py  run_all.py
Hospitality-Workforce-Forecasting-Suite/src/api/: main.py  schemas.py
Hospitality-Workforce-Forecasting-Suite/src/data/: __init__.py  clean.py  load.py  store.py
Hospitality-Workforce-Forecasting-Suite/src/features/: decomposition.py  stationarity.py
Hospitality-Workforce-Forecasting-Suite/src/models/: __init__.py  evaluate.py  holtwinters_model.py  naive_model.py  sarima_model.py
Hospitality-Workforce-Forecasting-Suite/tests/fixtures/: conftest.py
Hospitality-Workforce-Forecasting-Suite/tests/unit/: test_load.py  test_models.py
Hourly-Energy-Demand-Forecasting-Hub/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
Hourly-Energy-Demand-Forecasting-Hub/.github/workflows/: ci.yml
Hourly-Energy-Demand-Forecasting-Hub/All Models/AEP/: feature_cols.json
Hourly-Energy-Demand-Forecasting-Hub/All_Notebooks/: COMED_time_series.ipynb  DAYTON_time_series.ipynb  PJMW_time_series.ipynb
Hourly-Energy-Demand-Forecasting-Hub/config/: logging.yaml  model_params.yaml  settings.py
Hourly-Energy-Demand-Forecasting-Hub/datasets/processed/: AEP.parquet  PJME.parquet
Hourly-Energy-Demand-Forecasting-Hub/deployment/docker/: Dockerfile.api  Dockerfile.dashboard
Hourly-Energy-Demand-Forecasting-Hub/docs/: architecture.md
Hourly-Energy-Demand-Forecasting-Hub/models/AEP/: model_metrics.json  test_predictions.csv
Hourly-Energy-Demand-Forecasting-Hub/notebooks/exploratory/: PJME_time_series.ipynb
Hourly-Energy-Demand-Forecasting-Hub/scripts/: generate_report.py  run_pipeline.py
Hourly-Energy-Demand-Forecasting-Hub/src/api/: main.py  schemas.py
Hourly-Energy-Demand-Forecasting-Hub/src/dashboard/: app.py
(+198 files in other folders)
