[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crypto-market-intelligence-hub"
version = "1.0.0"
description = "End-to-end crypto market forecasting: ARIMA, Prophet, LSTM, GRU + FastAPI + Streamlit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["crypto", "forecasting", "time-series", "machine-learning", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "prophet>=1.1",
  "tensorflow>=2.12",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "plotly>=5.15",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
  "streamlit>=1.35",
  "pyarrow>=14.0",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "pre-commit>=3.6",
  "types-PyYAML",
  "httpx",                # for FastAPI TestClient
]
live = [
  "yfinance>=0.2",
]
notebooks = [
  "notebook>=7.0",
  "ipykernel>=6.0",
  "jupyterlab>=4.0",
]

[project.scripts]
crypto-api = "src.api.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]

# ── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "config"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501", "B008", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["src/dashboard/*", "src/api/main.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60
